# eos-downloader

./: .bumpversion.cfg  .coveragerc  .dockerignore  .envrc.example  .gitignore  .mcp.json  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  AUTHORS  CLAUDE.md  Dockerfile  Dockerfile.docker  MANIFEST.in  Makefile  README.md  cEOS-lab-4.33.0F.tar.xz.md5sum  mkdocs.yml  pylintrc  pyproject.toml  pyproject.toml.orig  pytest.ini  report.html  requirements-dev.txt  requirements.txt  setup.py  stable  tox.ini  versions.json
.agents/skills/run-checks/: SKILL.md
.claude/: README.md  settings.json
.claude/agents/: python-reviewer.md  test-writer.md
.claude/commands/opsx/: explore.md  propose.md
.claude/skills/bump-release/: SKILL.md
.codex/: config.toml  hooks.json
.codex/agents/: python-reviewer.toml  test-writer.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODEOWNERS  copilot-instructions.md  dependabot.yml  generate_release.py  pull_request_template.md  python-versions.json  release.md  release.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  general_discussion.md
.github/agents/: accessibility.agent.md  blueprint-mode-codex.agent.md  blueprint-mode.agent.md  debug.agent.md  implementation-plan.agent.md  mentor.agent.md  principal-software-engineer.agent.md  se-ux-ui-designer.agent.md  specification.agent.md  tech-debt-remediation-plan.agent.md
.github/docs/: COVERAGE_BADGE_SETUP.md  DOCS_QUICK_REFERENCE.md  PR_LABELING.md  PR_LABELING_IMPLEMENTATION.md  PYTHON_VERSIONS.md  README.md  SECURITY_FIX_OS_SYSTEM.md  TODO_VERSIONS_PYTHON.md  release.md
.github/instructions/: arista-domain.instructions.md  conventional-commit.prompt.md  copilot-instructoins.md  devops-core-principles.instructions.md  github-actions-ci-cd-best-practices.instructions.md  python.instructions.md  testing.instructions copy.md  tooling.instructions.md
.github/plans/: INDEX.md  README.md  execution-plan-tech-debt.md  github-issues-tech-debt.md  immediate-actions-tech-debt.md  macos-gui-plan.md  technical-debt-analysis-dec-2025.md  technical-debt-summary-dec-2025.md  test-coverage-improvement-v1.md  upgrade-package-manager-uv-v1.md
.github/plans/technical debt/: INDEX.md  execution-plan-tech-debt.md  github-issues-tech-debt.md  immediate-actions-tech-debt.md  technical-debt-summary-dec-2025.md
.github/prompts/: create-agentsmd.prompt.md  create-implementation-plan.prompt.md  create-llms.prompt.md  editorconfig.prompt.md  prompt-builder.prompt.md  readme-blueprint-generator.prompt.md  suggest-awesome-github-copilot-prompts.prompt.md  update-implementation-plan.prompt.md  update-llms.prompt.md  update-markdown-file-index.prompt.md
.github/promtps/: create-implementation-plan.prompt.md  create-llms.prompt.md  update-implementation-plan.prompt.md
.github/scripts/: README.md  check-python-versions.py  docs-helper.sh  opsx-branch-guard  sync-python-versions.py  update_coverage_badge.py
.github/workflows/: README.md  check-docs.yml  check-python-versions.yml  coverage-badge.yml  docker-build-dev.yml  docker-edge.yml  documentation.yml  main-doc.yml  main_doc.yml  on_demand.yml  pr-management.yml  pr-rebase.yml  pr-triage.yml  pull-request-rn-labeler.yml  push-to-main.yml  pytest.yml  release.yml  test-release.yml
04f20f2/: 404.html  index.html
04f20f2/api/defaults/: index.html
04f20f2/api/helpers/: index.html
04f20f2/docker/: index.html
04f20f2/faq/: index.html
04f20f2/search/: search_index.json
04f20f2/stylesheets/: extra.material.css
04f20f2/usage/cvp/: index.html
04f20f2/usage/environment/: index.html
04f20f2/usage/eos/: index.html
04f20f2/usage/info/: index.html
04f20f2/usage/mapping/: index.html
docs/: CODE_OF_CONDUCT.md  README.md  contributing.md  docker.md  faq.md  uv-installation-modes.md
docs/api/: config.md  defaults.md  exceptions.md  helpers.md  logging_config.md  tools.md
docs/changelogs/: DOCS_DEPLOYMENT_CHANGELOG.md
docs/dev-notes/: macos-gui-plan.md  tox-to-uv-migration.md  uv-installation-modes.md
docs/usage/: configuration.md  containerlab.md  cvp.md  environment.md  eos.md  info.md  mapping.md  path.md
eos_downloader/: __init__.py  config.py  cvp.py  data.py  defaults.py  download.py  eos.py  logging_config.py  object_downloader.py  swix.py  tools.py  tqdm.py
eos_downloader/cli/: __main__.py  cli.py  utils.py
eos_downloader/console/: __init__.py  client.py
eos_downloader/exceptions/: __init__.py
eos_downloader/helpers/: __init__.py  progress.py  security.py  signals.py  transfer.py
eos_downloader/legacy/: rich_download.py
eos_downloader/logics/: __init__.py  arista_server.py  arista_xml_server.py  client.py  containerlab.py  download.py  download_support.py  server.py
eos_downloader/models/: data.py  types.py  version.py
gui/: .gitignore  Package.swift  run.sh
gui/scripts/: build_ardl_binary.sh
main/: 404.html  index.html  objects.inv
main/CODE_OF_CONDUCT/: index.html
main/contributing/: index.html
main/docker/: index.html
main/faq/: index.html
main/search/: search_index.json
main/stylesheets/: extra.material.css
plans/: README.md  feature-cache-download-docker-v1.md  test-coverage-improvement-v1.md
tests/: conftest.py  data.xml  pytest.ini
tests/data/: arista_test.xml
tests/integration/: __init__.py  mock_arista_api.py  test_cli_workflow.py  test_version_discovery.py
tests/lib/: dataset.py  fixtures.py  helpers.py
tests/system/: test_eos_download.py  test_eos_download.py.old
tests/unit/: test_CvFeatureManager.py  test_config.py  test_eos_download.py  test_eos_version.py  test_init.py  test_logging_config.py  test_object_downloader.py  test_tools.py
v0.12.1/faq/: index.html
v0.12.1/search/: search_index.json
v0.13.0/: index.html
v0.13.0/search/: search_index.json
v0.14.0/: 404.html
v0.14.0/CODE_OF_CONDUCT/: index.html
v0.14.0/search/: search_index.json
v0.15.0/: 404.html  index.html
v0.15.0/contributing/: index.html
v0.15.0/docker/: index.html
v0.15.0/faq/: index.html
v0.15.0/search/: search_index.json
(+153 files in other folders)
