[tool.poetry]
name = "eos_downloader"
version = "0.1.0"
description = "A toolkit to download Arista softwares"
authors = ["Thomas Grimonet <tgrimonet@arista.com>"]
repository = "https://github.com/titom73/arista-downloader"
license = "APACHE"

[tool.poetry.dependencies]
python = "^3.8"
cryptography = "*"
paramiko = "*"
requests = "*"
requests-toolbelt = "*"
scp = "*"
tqdm = "*"
loguru = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-cov = "*"
pytest-html = "*"
pytest-dependency = "*"
pytest-metadata = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
